Implement session-based authentication
TODO: JWT based authentication in future